<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_restaurant"
            android:title="@string/menu_restaurant" />
        <item
            android:id="@+id/nav_hospitals"
            android:title="@string/menu_hospitals" />
        <item
            android:id="@+id/nav_pubs"
            android:title="@string/menu_pubs" />
        <item
            android:id="@+id/nav_schools"
            android:title="@string/menu_schools" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
